--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,11 @@ set(CMAKE_BUILD_TYPE "Release")
 
 find_package(CUDAToolkit REQUIRED)
 
+# --- auto-ignore build directory
+if(NOT EXISTS ${PROJECT_BINARY_DIR}/.gitignore)
+  file(WRITE ${PROJECT_BINARY_DIR}/.gitignore "*")
+endif()
+
 set(SOURCE_FILES src/cu.cpp src/nvrtc.cpp)
 include_directories(./include/)
 include_directories(${CUDAToolkit_INCLUDE_DIRS})
