replace mutable ref with a sha key

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -12,6 +12,6 @@ repos:
     - id: cmake-format
     - id: cmake-lint
   - repo: https://github.com/citation-file-format/cff-converter-python
-    rev: main
+    rev: ebf0b5e44d67f8beaa1cd13a0d0393ea04c6058d
     hooks:
     - id: validate-cff
