added pre-commit config file to untracked files, so users can choose which hook ids they want to have enabled/disabled

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,7 @@
 *.exe
 *.out
 *.app
+
+# disable trackign changes on the pre-commit hook configuration file, so users can 
+# have their own rules enabled/disabled
+/.pre-commit-config.yaml
