committing suggestions from linter

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,9 +16,7 @@ if(NOT EXISTS ${PROJECT_BINARY_DIR}/.gitignore)
   file(WRITE ${PROJECT_BINARY_DIR}/.gitignore "*")
 endif()
 
-set(SOURCE_FILES
-
-     src/cu.cpp src/nvrtc.cpp)
+set(SOURCE_FILES src/cu.cpp src/nvrtc.cpp)
 include_directories(./include/)
 include_directories(${CUDAToolkit_INCLUDE_DIRS})
 
