--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -13,13 +13,13 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Install pre-commit
-        shell: bash -l {0}
+        shell: bash
         run: |
           sudo apt install python3 python3-pip
-          python3 -m pip install --user pre-commit
+          python3 -m pip install pre-commit
           pre-commit install
 
       - name: Run pre-commit on all files with project standard configuration
-        shell: bash -l {0}
+        shell: bash
         run: |
           pre-commit run --all-files
