Add a build script for vector_add

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,6 +17,7 @@ if(NOT EXISTS ${PROJECT_BINARY_DIR}/.gitignore)
 endif()
 
 set(SOURCE_FILES src/cu.cpp src/nvrtc.cpp)
+
 include_directories(./include/)
 include_directories(${CUDAToolkit_INCLUDE_DIRS})
 
@@ -24,3 +25,6 @@ add_library(cudawrappers SHARED ${SOURCE_FILES})
 
 # Including linters rules
 include(cmake/linter-tools.cmake)
+
+# Tests
+add_subdirectory(tests/vector_add)
