ci workflow now installs cppcheck and clang-format itself because pre-commit do that somehow

--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -19,6 +19,12 @@ jobs:
           python3 -m pip install pre-commit
           pre-commit install
 
+      - name: Install dependencies of pre-commit hooks
+        shell: bash
+        run: |
+          sudo apt install clang-format
+          sudo apt install cppcheck
+
       - name: Run pre-commit on all files with project standard configuration
         shell: bash
         run: |
