--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -29,5 +29,4 @@ jobs:
       - name: Run pre-commit on all files changed in this branch using project standard configuration
         shell: bash
         run: |
-          pre-commit run --from-ref HEAD^^^ --to-ref HEAD
-
+          pre-commit run --from-ref ${{ github.base_ref }} --to-ref HEAD
