debugging precommit workflow

--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -32,4 +32,5 @@ jobs:
         run: |
           echo "GITHUB_BASE_REF = $GITHUB_BASE_REF"
           echo "GITHUB_HEAD_REF = $GITHUB_HEAD_REF"
+          git diff --name-only $GITHUB_BASE_REF..$GITHUB_HEAD_REF
           pre-commit run --from-ref $GITHUB_BASE_REF --to-ref $GITHUB_HEAD_REF
