--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -27,6 +27,7 @@ jobs:
         run: |
           echo "GITHUB_BASE_REF = $GITHUB_BASE_REF"
           echo "GITHUB_HEAD_REF = $GITHUB_HEAD_REF"
+          echo "GITHUB_REF_NAME = $GITHUB_REF_NAME"
           git checkout $GITHUB_BASE_REF
           git checkout $GITHUB_HEAD_REF
 
