--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -22,14 +22,32 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Avoid problems with missing refs later
+      - name: Show some relevant env vars
         shell: bash
         run: |
           echo "GITHUB_BASE_REF = $GITHUB_BASE_REF"
           echo "GITHUB_HEAD_REF = $GITHUB_HEAD_REF"
-          echo "GITHUB_REF_NAME = $GITHUB_REF_NAME"
-          git checkout $GITHUB_BASE_REF
-          git checkout $GITHUB_HEAD_REF
+          echo "GITHUB_REF = $GITHUB_REF"
+
+      - name: Set the target and source refs if the trigger was a pull request
+        if: ${{ github.event_name == 'pull_request' 
+        shell: bash
+        run: |
+          echo "precommit_from_ref=$GITHUB_BASE_REF" >> $GITHUB_ENV
+          echo "precommit_to_ref=$GITHUB_HEAD_REF" >> $GITHUB_ENV
+
+      - name: Set the target and source refs if the trigger was not a pull request
+        if: ${{ github.event_name != 'pull_request' 
+        shell: bash
+        run: |
+          echo "precommit_from_ref=$GITHUB_REF" >> $GITHUB_ENV
+          echo "precommit_to_ref=$GITHUB_HEAD_REF" >> $GITHUB_ENV
+
+      - name: Avoid problems with missing refs later
+        shell: bash
+        run: |
+          git checkout ${{ env.precommit_from_ref }}
+          git checkout ${{ env.precommit_to_ref }}
 
       - name: Install pre-commit
         shell: bash
