Try to enable duplication checks on Codacy using the configuration file

--- a/.codacy.yml
+++ b/.codacy.yml
@@ -1,12 +1,15 @@
 ---
 engines:
   cppcheck:
+    enabled: true
     language: c++
+  duplication:
+    enabled: true
   flawfinder:
+    enabled: true
     exclude_paths:
 languages:
   cpp:
     extensions:
       - '*.cpp'
       - '*.hpp'
-      
