Check for error message in Codacy workflow

--- a/.github/workflows/codacy.yml
+++ b/.github/workflows/codacy.yml
@@ -19,6 +19,7 @@ jobs:
       #   https://github.com/codacy/codacy-analysis-cli-action/blob/9f09141804faa25deeb6d09264f7e894f6c50ef9/action.yml#L92
       - name: Run clang-tidy and codacy-clang-tidy
         env:
+          CODACY_URL: https://api.codacy.com
           CODACY_CLANG_TIDY_VERSION: 1.3.2
           PROJECT_TOKEN: ${{ secrets.CODACY_PROJECT_TOKEN }}
         run: |
@@ -27,4 +28,6 @@ jobs:
           git clone https://github.com/codacy/codacy-clang-tidy
           chmod a+x codacy-clang-tidy-latest codacy-clang-tidy/scripts/send-results.sh
           cmake -S . -B build
-          make --directory=build clang-tidy | codacy-clang-tidy/scripts/send-results.sh
+          make --directory=build clang-tidy | codacy-clang-tidy/scripts/send-results.sh | tee curl-output
+          # Return 1 if error is found
+          grep -v error curl-output
