Add installation to support CMake find_package

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,7 +23,8 @@ add_library(cudawrappers SHARED ${SOURCE_FILES})
 
 target_include_directories(
   cudawrappers
-  PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include"
+  PUBLIC $<INSTALL_INTERFACE:include/cudawrappers>
+         $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
   PRIVATE ${CUDAToolkit_INCLUDE_DIRS})
 
 target_link_libraries(cudawrappers PUBLIC CUDA::cuda_driver CUDA::nvrtc)
@@ -33,3 +34,22 @@ include(cmake/linter-tools.cmake)
 
 # Tests
 add_subdirectory(tests)
+
+# Installation
+install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/include/cu.hpp
+              ${CMAKE_CURRENT_SOURCE_DIR}/include/nvrtc.hpp
+        DESTINATION "include/cudawrappers")
+
+install(
+  TARGETS cudawrappers
+  EXPORT cudawrappers-export
+  LIBRARY DESTINATION lib
+  ARCHIVE DESTINATION lib)
+
+install(
+  EXPORT cudawrappers-export
+  FILE cudawrappers-targets.cmake
+  DESTINATION lib/cmake/cudawrappers)
+
+install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/cmake/cudawrappers-config.cmake
+        DESTINATION "lib/cmake/cudawrappers")
