Add support for components in find_package

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,34 +1,69 @@
 cmake_minimum_required(VERSION 3.17 FATAL_ERROR)
 
-set(project cudawrappers)
 project(
-  ${project}
+  cudawrappers
   DESCRIPTION "C++ Wrappers for the CUDA Driver API"
   VERSION 0.3.0
   HOMEPAGE_URL https://github.com/nlesc-recruit/cudawrappers
   LANGUAGES CXX)
 
 set(CMAKE_CXX_STANDARD 11)
-set(CMAKE_BUILD_TYPE "Release")
+set(CMAKE_BUILD_TYPE Release)
+option(BUILD_SHARED_LIBS "Create shared libraries" True)
 
 find_package(CUDAToolkit REQUIRED)
 
-# --- auto-ignore build directory
-if(NOT EXISTS ${PROJECT_BINARY_DIR}/.gitignore)
-  file(WRITE ${PROJECT_BINARY_DIR}/.gitignore "*")
-endif()
+# Define components
+set(COMPONENTS cu nvrtc)
+set(LINK_cu CUDA::cuda_driver)
+set(LINK_nvrtc CUDA::cuda_driver CUDA::nvrtc)
 
-set(SOURCE_FILES src/cu.cpp src/nvrtc.cpp)
+include(GNUInstallDirs)
+foreach(component ${COMPONENTS})
+  # Create library
+  add_library(${component})
+  # Add sources
+  target_sources(${component} PRIVATE src/${component}.cpp)
+  # Add headers
+  set_target_properties(${component} PROPERTIES
+                        PUBLIC_HEADER include/${component}.hpp)
+  # Add the project name as a prefix to the output libraries
+  set_target_properties(${component} PROPERTIES PREFIX ${PROJECT_NAME}-)
+  # Add includes
+  target_include_directories(
+    ${component}
+    PUBLIC $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}/${PROJECT_NAME}>
+           $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+    PRIVATE ${CUDAToolkit_INCLUDE_DIRS})
+  # Add links
+  target_link_libraries(${component} PUBLIC ${LINK_${component}})
+  # Install libraries and headers
+  install(
+    TARGETS ${component}
+    EXPORT ${component}-config # export component cmake targets
+    COMPONENT ${component}
+    PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/${PROJECT_NAME})
+  # Install component cmake targets
+  install(
+    EXPORT ${component}-config
+    NAMESPACE ${PROJECT_NAME}::
+    DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/${PROJECT_NAME})
+endforeach()
 
-add_library(cudawrappers SHARED ${SOURCE_FILES})
+# Install project cmake targets
+include(CMakePackageConfigHelpers)
 
-target_include_directories(
-  cudawrappers
-  PUBLIC $<INSTALL_INTERFACE:include/${project}>
-         $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
-  PRIVATE ${CUDAToolkit_INCLUDE_DIRS})
+configure_file(cmake/${PROJECT_NAME}-config.cmake.in
+               ${PROJECT_NAME}-config.cmake @ONLY)
 
-target_link_libraries(cudawrappers PUBLIC CUDA::cuda_driver CUDA::nvrtc)
+write_basic_package_version_file(
+  ${PROJECT_NAME}-config-version.cmake
+  VERSION ${cudawrappers_VERSION}
+  COMPATIBILITY AnyNewerVersion)
+
+install(FILES ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}-config.cmake
+              ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}-config-version.cmake
+        DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/${PROJECT_NAME})
 
 # Including linters rules
 include(cmake/linter-tools.cmake)
@@ -36,28 +71,7 @@ include(cmake/linter-tools.cmake)
 # Tests
 add_subdirectory(tests)
 
-# Installation
-install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/include/cu.hpp
-              ${CMAKE_CURRENT_SOURCE_DIR}/include/nvrtc.hpp
-        DESTINATION include/${project})
-
-install(
-  TARGETS cudawrappers
-  EXPORT cudawrappers-targets
-  LIBRARY DESTINATION lib
-  ARCHIVE DESTINATION lib)
-
-install(
-  EXPORT cudawrappers-targets
-  FILE ${project}-targets.cmake
-  DESTINATION lib/cmake/${project})
-
-include(CMakePackageConfigHelpers)
-write_basic_package_version_file(
-  ${CMAKE_CURRENT_BINARY_DIR}/cmake/${project}-config-version.cmake
-  VERSION ${cudawrappers_VERSION}
-  COMPATIBILITY AnyNewerVersion)
-
-install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/cmake/${project}-config.cmake
-              ${CMAKE_CURRENT_BINARY_DIR}/cmake/${project}-config-version.cmake
-        DESTINATION lib/cmake/${project})
+# --- auto-ignore build directory
+if(NOT EXISTS ${PROJECT_BINARY_DIR}/.gitignore)
+  file(WRITE ${PROJECT_BINARY_DIR}/.gitignore "*")
+endif()
