--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,9 +36,10 @@ set(CUDA_MIN_VERSION 10.0)
 find_package(CUDAToolkit ${CUDA_MIN_VERSION} REQUIRED)
 
 # Define components
-set(COMPONENTS cu nvrtc)
+set(COMPONENTS cu nvrtc nvtx)
 set(LINK_cu CUDA::cuda_driver)
 set(LINK_nvrtc CUDA::cuda_driver CUDA::nvrtc)
+set(LINK_nvtx CUDA::nvToolsExt)
 
 include(GNUInstallDirs)
 foreach(component ${COMPONENTS})
