Improve support for linting

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,7 +7,10 @@ repos:
     rev: v1.3.5
     hooks:
       - id: clang-tidy
+        types_or: ['c++', 'cuda']
+        args: ['-p=build', '--fix-notes']
       - id: cppcheck
+        args: ['--project=build/compile_commands.json']
   - repo: https://github.com/cheshirekow/cmake-format-precommit
     rev: v0.6.13
     hooks:
