--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,8 +9,26 @@ project(
 )
 
 set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_EXTENSIONS False)
 set(CMAKE_BUILD_TYPE Release)
 option(BUILD_SHARED_LIBS "Create shared libraries" True)
+
+# Enable Clang compiler warnings
+if(CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
+  string(
+    JOIN
+    " "
+    CLANG_WARNING_FLAGS
+    -Weverything
+    -Wno-c++98-compat
+    -Wno-c++98-compat-pedantic
+    -Wno-padded
+  )
+  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${CLANG_WARNING_FLAGS}")
+endif()
+
+# Export compile commands for use by clang-tidy and cppcheck
+set(CMAKE_EXPORT_COMPILE_COMMANDS True)
 
 set(CUDA_MIN_VERSION 10.0)
 find_package(CUDAToolkit ${CUDA_MIN_VERSION} REQUIRED)
