--- a/environment.yml
+++ b/environment.yml
@@ -2,8 +2,9 @@ name: recruit
 channels:
   - conda-forge
 dependencies:
-  - compilers
+  - c-compiler
   - cxx-compiler
+  - clang
   - python
   - cppcheck
   - clang-tools
