Use cudawrappers directory for includes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -51,14 +51,15 @@ foreach(component ${COMPONENTS})
   target_sources(${component} PRIVATE src/${component}.cpp)
   # Add headers
   set_target_properties(
-    ${component} PROPERTIES PUBLIC_HEADER include/${component}.hpp
+    ${component} PROPERTIES PUBLIC_HEADER
+                            include/${PROJECT_NAME}/${component}.hpp
   )
   # Add the project name as a prefix to the output libraries
   set_target_properties(${component} PROPERTIES PREFIX ${PROJECT_NAME}-)
   # Add includes
   target_include_directories(
     ${component}
-    PUBLIC $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}/${PROJECT_NAME}>
+    PUBLIC $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>
            $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
     PRIVATE ${CUDAToolkit_INCLUDE_DIRS}
   )
