Pin versions of compiler and linter tools in conda env file

--- a/environment.yml
+++ b/environment.yml
@@ -2,21 +2,21 @@ name: recruit
 channels:
   - conda-forge
 dependencies:
-  - c-compiler
-  - clang
-  - clang-tools
-  - cmake
-  - cppcheck
-  - cudatoolkit-dev
-  - cxx-compiler
+  - c-compiler==1.5.2
+  - clang==16.0.4
+  - clang-tools==16.0.4
+  - cmake==3.26.4
+  - cppcheck==2.10.3
+  - cudatoolkit-dev==10.1.243
+  - cxx-compiler==1.5.2
   - doxygen
   - include-what-you-use
   - make
   - pip
-  - pre-commit
-  - python
-  - yamllint
+  - python==3.11.3
+  - yamllint==1.31.0
   - pip:
-      - clang-format
-      - cmakelang
-      - flawfinder
+      - pre-commit==3.3.2
+      - clang-format==16.0.4
+      - cmakelang==0.6.13
+      - flawfinder==2.0.19
