Activate recruit env

--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -53,6 +53,7 @@ jobs:
         with:
             mamba-version: "*"
             environment-file: environment.yml
+            activate-environment: recruit
       - shell: bash
         run: |
             conda info
