Add bash shell specification where conda is needed

--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -49,15 +49,19 @@ jobs:
             mamba-version: "*"
             environment-file: environment.yml
             activate-environment: recruit
-      - run: |
+
+      - shell: bash -el {0}
+        run: |
             conda info
 
 #      - name: Install dependencies and generate compilation database
+#        shell: bash -el {0}
 #        run: |
 #          sudo apt install clang-tidy cppcheck nvidia-cuda-toolkit clang
 #          cmake -DCMAKE_CXX_COMPILER=clang++ -S . -B build
 
       - name: Run pre-commit on all files changed in this branch using project standard configuration
+        shell: bash -el {0}
         run: |
           git diff --name-only ${{ env.precommit_from_ref }}...${{ env.precommit_to_ref }}
           pre-commit run --from-ref ${{ env.precommit_from_ref }} --to-ref ${{ env.precommit_to_ref }}
