--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -1,8 +1,12 @@
 name: pre-commit
+# conda cache setup based on https://github.com/epassaro/cache-conda-envs
 
 on:
   push:
   workflow_dispatch:
+
+env:
+  CACHE_NUMBER: 0  # increase to reset conda env cache manually
 
 jobs:
   linting:
@@ -46,9 +50,21 @@ jobs:
       - name: Setup environment with Mamba
         uses: conda-incubator/setup-miniconda@v2
         with:
-            mamba-version: "*"
-            environment-file: environment.yml
-            activate-environment: recruit
+          mamba-version: "*"
+          activate-environment: recruit
+
+      - name: Set cache date
+        run: echo "DATE=$(date +'%Y%m%d')" >> $GITHUB_ENV
+
+      - uses: actions/cache@v2
+        with:
+          path: /usr/share/miniconda3/envs/recruit
+          key: conda-${{ hashFiles('environment.yml') }}-${{ env.DATE }}-${{ env.CACHE_NUMBER }}
+        id: cache
+
+      - name: Update mamba environment if cache is outdated
+        if: steps.cache.outputs.cache-hit != 'true'
+        run: mamba env update -n recruit -f environment.yml
 
       - name: Generate compilation database
         shell: bash -el {0}
