build testing code with cmake

--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -70,7 +70,7 @@ jobs:
       - name: Generate compilation database
         shell: bash -el {0}
         run: |
-          cmake -DCMAKE_CXX_COMPILER=clang++ -S . -B build
+          cmake -DCMAKE_CXX_COMPILER=clang++ -DBUILD_TESTING=True -S . -B build
 
       - name: Run pre-commit on all files changed in this branch using project standard configuration
         shell: bash -el {0}
