--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -5,9 +5,6 @@ on:
   push:
   workflow_dispatch:
 
-env:
-  CACHE_NUMBER: 0  # increase to reset conda env cache manually
-
 jobs:
   linting:
     name: run
@@ -60,7 +57,7 @@ jobs:
       - uses: actions/cache@v2
         with:
           path: /usr/share/miniconda3/envs/recruit
-          key: conda-${{ hashFiles('environment.yml') }}-${{ env.DATE }}-${{ env.CACHE_NUMBER }}
+          key: conda-${{ hashFiles('environment.yml') }}-${{ env.DATE }}
         id: cache
 
       - name: Update mamba environment if cache is outdated
